utf-8-bom editorconfig 추가

--- a/ys_cc7/ys_cc7.vcxproj.filters
+++ b/ys_cc7/ys_cc7.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="account.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="new.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
