--- a/ys_cc7/ys_cc7.vcxproj
+++ b/ys_cc7/ys_cc7.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{d45cedf6-5b25-4b86-9cc3-e084e462ff1f}</ProjectGuid>
     <RootNamespace>yscc7</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>ys_cc7</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -130,6 +131,7 @@
     <ClCompile Include="account.cpp" />
     <ClCompile Include="calc.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="new.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
